--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,9 +3,12 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Tutorial
+appTitle=Innovation Day
 
 #YDES: Application description
 appDescription=A Fiori application.
 #XTIT: Main view title
-title=Tutorial
+
+DetailTitle=Übersicht 
+title=Innovation Day
+objectPageInformation=Informationen
