--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Innovation Day
+appTitle=NOVO Innovation Day
 
 #YDES: Application description
 appDescription=A Fiori application.
@@ -11,4 +11,17 @@ appDescription=A Fiori application.
 
 DetailTitle=Übersicht 
 title=Innovation Day
-objectPageInformation=Informationen
+objectPageInformation=Agenda
+buttonAnmelden=Anmelden
+inputEmail=email@mail.com
+objectPageAllgInformation=Informationen
+titleNovoInnovationDay= NOVO Innovation Day 2023
+objectPageZeit=Zeit
+objectPageZimmer=Zimmer
+objectPageReferat=Referat
+objectPageBiographie=Biografie
+objectPageName=Name
+objectPageLageplan=Lageplan
+objectPageLocation=Lokalität
+objectPageRoomBeschreibung=Beschreibung
+objectPageInformationLageplan=Lageplan
